<resources>
    <string name="app_name">IndoorMap</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="error_in_status">Error in Status</string>
    <string name="missing_information">Missing information</string>
    <string name="others">Others</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="error_in_information">Error in Information</string>
    <string name="feedback">FeedBack</string>
    <string name="input_the_other_condition_here">Input the other condition here</string>
</resources>
